@@ -1,4 +1,6 @@
 ver 0.23.9 (not yet released)
+* input
+  - cdio_paranoia: add options "mode" and "skip"
 * decoder
   - ffmpeg: support FFmpeg 5.1
 * output
